@@ -18,16 +18,16 @@ class User(BASE):
 
     userid = Column(String(255), primary_key=True)
     active = Column(Boolean, default=True)
-    firstname = Column(String(50))
-    lastname = Column(String(50))
+    firstname = Column(String(255))
+    lastname = Column(String(255))
 
-    directorate = Column(String(50))
-    directorate_abbr = Column(String(10))
-    department = Column(String(50))
-    department_abbr = Column(String(10))
+    directorate = Column(String(255))
+    directorate_abbr = Column(String(50))
+    department = Column(String(255))
+    department_abbr = Column(String(50))
 
-    email = Column(String(50))
-    email2 = Column(String(50))
+    email = Column(String(255))
+    email2 = Column(String(255))
     url = Column(String(100))
     phone_office = Column(String(30))
     phone_fax = Column(String(30))
